[FEAT] Experience gained when tasks are completed